--- a/test.html
+++ b/test.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <title>Test</title>
   <!-- Include Ecwid JS SDK -->
   <script src="https://djqizrxa6f10j.cloudfront.net/ecwid-sdk/js/1.2.8/ecwid-app.js"></script>
 
