--- a/test.html
+++ b/test.html
@@ -36,7 +36,7 @@
 </head>
 
 <body class='normalized'>
-  <div>Show something</div>
+  <div>Helloworld!</div>
 
 <!-- JS for CSS Framework components -->
   <script src="https://d35z3p2poghz10.cloudfront.net/ecwid-sdk/css/1.3.13/ecwid-app-ui.min.js
