--- a/test.html
+++ b/test.html
@@ -37,48 +37,11 @@
 
 <body class='normalized'>
 
-<div class="a-card a-card--normal">
-	<div class="a-card__paddings">
-		<div class="form-area">
-			<div class="form-area__title form-area__title--small">Header in the middle of content</div>
-			<div class="form-area__content">
-				<p>Select a Facebook group for your store to use it for communication with your customers. You must have admin permissions for this page.</p>
-				<div class="fieldsets-batch">
-					<div class="fieldset">
-						<div class="field field--medium">
-							<label class="field__label">City</label>
-							<input type="text" class="field__input" tabindex="4" maxlength="64">
-							<div class="field__placeholder">City</div>
-						</div>
-					</div>
-					<div class="fieldset">
-						<div class="field field--medium">
-							<label class="field__label">City</label>
-							<input type="text" class="field__input" tabindex="4" maxlength="64">
-							<div class="field__placeholder">City</div>
-						</div>
-					</div>
-					<div class="fieldset">
-						<div class="field field--medium">
-							<label class="field__label">City</label>
-							<input type="text" class="field__input" tabindex="4" maxlength="64">
-							<div class="field__placeholder">City</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="form-area__action">
-				<button type="button" class="btn btn-primary btn-medium">Save</button>
-			</div>
-		</div>
-	</div>
-</div>
+testing
 
 
 <!-- JS for CSS Framework components -->
-  <script src="https://d35z3p2poghz10.cloudfront.net/ecwid-sdk/css/1.3.13/ecwid-app-ui.min.js
-
-"></script>
+  <script src="https://d35z3p2poghz10.cloudfront.net/ecwid-sdk/css/1.3.13/ecwid-app-ui.min.js"></script>
 </body>
 
 </html>
