--- a/test.html
+++ b/test.html
@@ -41,31 +41,18 @@
 <div class="a-card a-card--normal">
 	<div class="a-card__paddings">
 		<div class="form-area">
-			<div class="form-area__title form-area__title--small">Header in the middle of content</div>
+			<div class="form-area__title form-area__title--small">Date Changer</div>
 			<div class="form-area__content">
-				<p>Select a Facebook group for your store to use it for communication with your customers. You must have admin permissions for this page.</p>
+				<p>Please key in the order number to change the date</p>
 				<div class="fieldsets-batch">
 					<div class="fieldset">
 						<div class="field field--medium">
-							<label class="field__label">City</label>
-							<input type="text" class="field__input" tabindex="4" maxlength="64">
-							<div class="field__placeholder">City</div>
+							<label class="field__label">Order Number</label>
+							<input type="number" class="field__input" tabindex="4" maxlength="64">
+							<div class="field__placeholder">Order Number</div>
 						</div>
 					</div>
-					<div class="fieldset">
-						<div class="field field--medium">
-							<label class="field__label">City</label>
-							<input type="text" class="field__input" tabindex="4" maxlength="64">
-							<div class="field__placeholder">City</div>
-						</div>
-					</div>
-					<div class="fieldset">
-						<div class="field field--medium">
-							<label class="field__label">City</label>
-							<input type="text" class="field__input" tabindex="4" maxlength="64">
-							<div class="field__placeholder">City</div>
-						</div>
-					</div>
+					
 				</div>
 			</div>
 			<div class="form-area__action">
@@ -78,7 +65,11 @@
 
 
 <!-- JS for CSS Framework components -->
-  <script src="https://d35z3p2poghz10.cloudfront.net/ecwid-sdk/css/1.3.13/ecwid-app-ui.min.js"></script>
+  <script src="https://d35z3p2poghz10.cloudfront.net/ecwid-sdk/css/1.3.13/ecwid-app-ui.min.js">
+$(document).ready(function(){
+	alert("Helloworld!");	
+});
+</script>
 </body>
 
 </html>
