--- a/test.html
+++ b/test.html
@@ -36,7 +36,7 @@
 </head>
 
 <body class='normalized'>
-
+<div>
 
 <div class="a-card a-card--normal">
 	<div class="a-card__paddings">
@@ -61,7 +61,7 @@
 		</div>
 	</div>
 </div>
-
+	</div>
 
 
 <!-- JS for CSS Framework components -->
