--- a/test.html
+++ b/test.html
@@ -37,39 +37,38 @@
 
 <body class='normalized'>
 <div>
-
-<div class="a-card a-card--normal">
-	<div class="a-card__paddings">
-		<div class="form-area">
-			<div class="form-area__title form-area__title--small">Date Changer</div>
-			<div class="form-area__content">
-				<p>Please key in the order number to change the date</p>
-				<div class="fieldsets-batch">
-					<div class="fieldset">
-						<div class="field field--medium">
-							<label class="field__label">Order Number</label>
-							<input type="number" class="field__input" tabindex="4" maxlength="64">
-							<div class="field__placeholder">Order Number</div>
+	<div class="a-card a-card--normal">
+		<div class="a-card__paddings">
+			<div class="form-area">
+				<div class="form-area__title form-area__title--small">Date Changer</div>
+				<div class="form-area__content">
+					<p>Please key in the order number to change the date</p>
+					<div class="fieldsets-batch">
+						<div class="fieldset">
+							<div class="field field--medium">
+								<label class="field__label">Order Number</label>
+								<input type="number" class="field__input" tabindex="4" maxlength="64">
+								<div class="field__placeholder">Order Number</div>
+							</div>
 						</div>
+
 					</div>
-					
 				</div>
-			</div>
-			<div class="form-area__action">
-				<button type="button" class="btn btn-primary btn-medium">Save</button>
+				<div class="form-area__action">
+					<button type="button" class="btn btn-primary btn-medium">Save</button>
+				</div>
 			</div>
 		</div>
 	</div>
 </div>
-	</div>
-
 
 <!-- JS for CSS Framework components -->
-  <script src="https://d35z3p2poghz10.cloudfront.net/ecwid-sdk/css/1.3.13/ecwid-app-ui.min.js">
-$(document).ready(function(){
-	alert("Helloworld!");	
-});
-</script>
+  <script src="https://d35z3p2poghz10.cloudfront.net/ecwid-sdk/css/1.3.13/ecwid-app-ui.min.js"></script>
+<script>
+	$(document).ready(function(){
+		alert("Helloworld!");	
+	});
+	</script>
 </body>
 
 </html>
