--- a/test.html
+++ b/test.html
@@ -40,7 +40,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date Changer</div>
+				<div class="form-area__title form-area__title--small">Date Changer1</div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the date</p>
 					<div class="fieldsets-batch">
@@ -64,11 +64,7 @@
 
 <!-- JS for CSS Framework components -->
   <script src="https://d35z3p2poghz10.cloudfront.net/ecwid-sdk/css/1.3.13/ecwid-app-ui.min.js"></script>
-<script>
-	$(document).ready(function(){
-		alert("Helloworld!");	
-	});
-	</script>
+
 </body>
 
 </html>
