--- a/test.html
+++ b/test.html
@@ -30,7 +30,8 @@
 
     // do something...
   </script>
-
+  <!-- Jquery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <!-- Include Ecwid CSS Framework -->
   <link rel="stylesheet" href="https://d35z3p2poghz10.cloudfront.net/ecwid-sdk/css/1.3.13/ecwid-app-ui.css"/>  
 </head>
@@ -64,7 +65,12 @@
 
 <!-- JS for CSS Framework components -->
   <script src="https://d35z3p2poghz10.cloudfront.net/ecwid-sdk/css/1.3.13/ecwid-app-ui.min.js"></script>
+<script>
+	$(document).ready(function(){
+ alert("helloworld");
+    });
 
+	</script>
 </body>
 
 </html>
