--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 			<div class="form-area">
 				<div class="form-area__title form-area__title--small">Date Changer1</div>
 				<div class="form-area__content">
-					<p>Please key in the order number to change the date</p>
+					<p id="krstest">Please key in the order number to change the date</p>
 					<div class="fieldsets-batch">
 						<div class="fieldset">
 							<div class="field field--medium">
@@ -67,7 +67,7 @@
   <script src="https://d35z3p2poghz10.cloudfront.net/ecwid-sdk/css/1.3.13/ecwid-app-ui.min.js"></script>
 <script>
 	$(document).ready(function(){
- alert("helloworld");
+$("#krstest").text("helloworld");
     });
 
 	</script>
