--- a/test.html
+++ b/test.html
@@ -32,6 +32,7 @@
   </script>
   <!-- Jquery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
   <!-- Include Ecwid CSS Framework -->
   <link rel="stylesheet" href="https://d35z3p2poghz10.cloudfront.net/ecwid-sdk/css/1.3.13/ecwid-app-ui.css"/>  
 </head>
@@ -48,8 +49,15 @@
 						<div class="fieldset">
 							<div class="field field--medium">
 								<label class="field__label">Order Number</label>
-								<input type="number" class="field__input" tabindex="4" maxlength="64">
+								<input id="order_no" type="number" class="field__input" tabindex="4" maxlength="64">
 								<div class="field__placeholder">Order Number</div>
+							</div>
+						</div>
+						<div class="fieldset">
+							<div class="field field--medium">
+								<label class="field__label">Date</label>
+								<input id="order_date" type="text" class="field__input" tabindex="4" maxlength="64">
+								<div class="field__placeholder">Date</div>
 							</div>
 						</div>
 
@@ -67,7 +75,7 @@
   <script src="https://d35z3p2poghz10.cloudfront.net/ecwid-sdk/css/1.3.13/ecwid-app-ui.min.js"></script>
 <script>
 	$(document).ready(function(){
-$("#krstest").text("helloworld");
+	$( "#order_date" ).datepicker({dateFormat: "dd M yy"});
     });
 
 	</script>
