--- a/test.html
+++ b/test.html
@@ -65,7 +65,7 @@
 					</div>
 				</div>
 				<div class="form-area__action">
-					<button type="button" class="btn btn-primary btn-medium">Save</button>
+					<button type="button" onclick="onSaveClick()" class="btn btn-primary btn-medium">Save</button>
 				</div>
 			</div>
 		</div>
