--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date Changer8</div>
+				<div class="form-area__title form-area__title--small">Date Changer9</div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the date</p>
 					<div class="fieldsets-batch">
@@ -101,7 +101,7 @@
 		  krslog("xhttp.onreadystatechange:xhttp.status = " + xhttp.status);
 		  if (xhttp.readyState == 4 && xhttp.status == 200) {
 		    var apiResponse = xhttp.responseText;
-		    krslog("Success: ID = " + apiResponse.id);
+		    krslog("Success: ID = " + apiResponse.orderid);
 
 		  }
 		  else{
