--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date Changer16</div>
+				<div class="form-area__title form-area__title--small">Date Changer18</div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the date</p>
 					<div class="fieldsets-batch">
@@ -117,7 +117,8 @@
 		  krslog("xhttp.status = " + xhttp.status);
 		  if (xhttp.readyState == 4 && xhttp.status == 200) {
 		    var apiResponse = xhttp.responseText;
-		    krslog("Success: ID = " + apiResponse.orderid);
+		    var my_order = JSON.parse(apiResponse);
+		    krslog("Success: ID = " + my_order.id);
 
 		  }
 		};
