--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date Changer18</div>
+				<div class="form-area__title form-area__title--small">Date Changer19</div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the date</p>
 					<div class="fieldsets-batch">
@@ -87,7 +87,16 @@
 	function onSaveClick(){
 		//$("#krstest").text($("#order_no").val());	
 		var order_no = $("#order_no").val();
-		krslog("Getting Order No " + order_no);
+		if (order_no == ""){
+			krslog("Error:Order No is empty");
+			return;	
+		}
+		krslog("Order No = " + order_no);
+		var order_date_text = $("#order_date").val();
+		if (order_date_text == ""){
+			krslog("Error:Date is empty");
+			return;	
+		}
 		var jsDate = $('#order_date').datepicker('getDate');
 		if (jsDate !== null) { // if any date selected in datepicker
 		    if (jsDate instanceof Date){// -> true
