--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date Changer20 show pickuptime</div>
+				<div class="form-area__title form-area__title--small">Date Changer21 extra fields</div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the date</p>
 					<div class="fieldsets-batch">
@@ -128,8 +128,13 @@
 		    var apiResponse = xhttp.responseText;
 		    var my_order = JSON.parse(apiResponse);
 		    krslog("Success: ID = " + my_order.id);
-		    krslog("Success: ID = " + my_order.pickupTime);
 
+		    var time_end = my_order.extraFields.ecwid_order_delivery_time_interval_end;	
+		    var time_format = my_order.extraFields.ecwid_order_delivery_time_display_format;
+		    var time_start = my_order.extraFields.ecwid_order_delivery_time_interval_start;
+		    krslog("Success: Time End = " + time_end);
+		    krslog("Success: Time Format = " + time_format);
+		    krslog("Success: Time Start = " + time_start);
 		  }
 		};
 
