--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date Changer21 extra fields</div>
+				<div class="form-area__title form-area__title--small">Date Changer22 checking for delivery</div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the date</p>
 					<div class="fieldsets-batch">
@@ -97,13 +97,11 @@
 			krslog("Error:Date is empty");
 			return;	
 		}
+
 		var jsDate = $('#order_date').datepicker('getDate');
 		if (jsDate !== null) { // if any date selected in datepicker
 		    if (jsDate instanceof Date){// -> true
-		        var order_date = jsDate.getDate();
-		        jsDate.getMonth();
-		        jsDate.getFullYear();
-		        krslog("Updating with Date = " + order_date);	 
+		        krslog("Updating with Date = " + jsDate);	 
 		    }
 		    else{
 		        krslog("Error:jsDate is not Date Instance");	    
@@ -134,7 +132,7 @@
 		    var time_start = my_order.extraFields.ecwid_order_delivery_time_interval_start;
 		    krslog("Success: Time End = " + time_end);
 		    krslog("Success: Time Format = " + time_format);
-		    krslog("Success: Time Start = " + time_start);
+		    krslog("Success: Time Start = " + time_start);			
 		  }
 		};
 
