--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date Changer24 set hours and minutes/div>
+				<div class="form-area__title form-area__title--small">Date Changer25 utc date/div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the date</p>
 					<div class="fieldsets-batch">
@@ -132,12 +132,12 @@
 		    var time_start = my_order.extraFields.ecwid_order_delivery_time_interval_start;
 
 	            if (time_end !== undefined && time_start !== undefined){
-		      var updated_time_start = jsDate
-		      var updated_time_end = jsDate
-		      updated_time_start.setHours(0)
-		      updated_time_end.setHours(23)
-		      updated_time_start.setMinutes(0)
-		      updated_time_end.setMinutes(59)
+		      var yst = new Date();
+		      yst.setDate(jsDate.getDate() - 1);
+			    
+		      var updated_time_start = new Date(Date.UTC(yst.getFullYear(), yst.getMonth(), yst.getDate(), 16, 0, 0, 0));
+		      var updated_time_end = new Date(Date.UTC(jsDate.getFullYear(), jsDate.getMonth(), jsDate.getDate(), 15, 59, 0, 0));
+
   		      krslog("Original: Time End = " + time_end);
 		      krslog("Original: Time Start = " + time_start);
   		      krslog("Update: Time End = " + updated_time_end);
