--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date Changer26 put</div>
+				<div class="form-area__title form-area__title--small">Date Changer27 put2</div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the date</p>
 					<div class="fieldsets-batch">
@@ -147,6 +147,10 @@
 						var requestURL = "https://app.ecwid.com/api/v3/"+storeId+"/orders/"+order_no+"?token="+accessToken
 						krslog("PUT:requestURL:" + requestURL);
 						xhttp.open("PUT", requestURL, true);
+			    			var to_send = {};
+			                        to_send.extraFields = {};
+                                                to_send.extraFields.ecwid_order_delivery_time_interval_end = updated_time_end;
+					        to_send.extraFields.ecwid_order_delivery_time_interval_start = updated_time_start;
 						xhttp.send(JSON.stringify(my_order));
 
 						xhttp.onreadystatechange = function() {
