--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date Changer27 put2</div>
+				<div class="form-area__title form-area__title--small">Date Changer29 put not working</div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the date</p>
 					<div class="fieldsets-batch">
@@ -142,6 +142,7 @@
 		      my_order.extraFields.ecwid_order_delivery_time_interval_end = updated_time_end;
 		      my_order.extraFields.ecwid_order_delivery_time_interval_start = updated_time_start;	    
 		      // Begin PUT
+			    /*
 						var xhttp = new XMLHttpRequest();
 								 
 						var requestURL = "https://app.ecwid.com/api/v3/"+storeId+"/orders/"+order_no+"?token="+accessToken
@@ -163,6 +164,7 @@
 						    krslog("Success: PUT Success ID = " + my_order.id);
 						  }
 						};    
+			    */
      		      // End PUT
 		    }
 		    else{
