--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date Changer31 put try2</div>
+				<div class="form-area__title form-area__title--small">Date Changer32 put try2</div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the date</p>
 					<div class="fieldsets-batch">
@@ -132,7 +132,7 @@
 		    var time_start = my_order.extraFields.ecwid_order_delivery_time_interval_start;
 
 	            if (time_end !== undefined && time_start !== undefined){			    
-		      var updated_time_start = new Date(yst.getFullYear(), yst.getMonth(), yst.getDate(), 00, 0, 0, 0);
+		      var updated_time_start = new Date(jsDate.getFullYear(), jsDate.getMonth(), jsDate.getDate(), 00, 0, 0, 0);
 		      var updated_time_end = new Date(jsDate.getFullYear(), jsDate.getMonth(), jsDate.getDate(), 23, 59, 0, 0);
 
   		      krslog("Original: Time End = " + time_end);
