--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date Changer36 try brute force date forrmat</div>
+				<div class="form-area__title form-area__title--small">Date Changer37 corect some errors</div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the date</p>
 					<div class="fieldsets-batch">
@@ -133,7 +133,7 @@
 
 	            if (time_end !== undefined && time_start !== undefined){			    
 		      var yst = new Date(jsDate.getTime());
-		      yst.setDate(date.getDate() - 1);
+		      yst.setDate(jsDate.getDate() - 1);
 
 		      //var updated_time_start = new Date(jsDate.getFullYear(), jsDate.getMonth(), jsDate.getDate(), 00, 0, 0, 0);
 		      //var updated_time_end = new Date(jsDate.getFullYear(), jsDate.getMonth(), jsDate.getDate(), 23, 59, 0, 0);
