--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date Changer39</div>
+				<div class="form-area__title form-area__title--small">Date Changer40</div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the date</p>
 					<div class="fieldsets-batch">
@@ -154,8 +154,40 @@
 						krslog("PUT:requestURL:" + requestURL);
 						xhttp2.open("PUT", requestURL, true);
 		   			        xhttp2.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-			    			var to_send = {'extraFields':{'ecwid_order_delivery_time_interval_end':updated_time_end,
-									     'ecwid_order_delivery_time_interval_start':updated_time_start}};
+			    			//var to_send = {'extraFields':{'ecwid_order_delivery_time_interval_end':updated_time_end,
+						//			     'ecwid_order_delivery_time_interval_start':updated_time_start}};
+			    			var to_send ={"extraFields": {
+									 "ecwid_order_delivery_time_interval_end": updated_time_end,
+									 "ecwid_order_delivery_time_display_format": "DATE",
+									 "ecwid_order_delivery_time_interval_start": updated_time_start,
+									     },
+									 "orderExtraFields": [
+									       {
+									 "id": "ecwid_order_delivery_time_interval_end",
+									 "value": updated_time_end,
+									 "customerInputType": "DATETIME",
+									 "title": "",
+									 "orderDetailsDisplaySection": "",
+									 "orderBy": "0"
+									       },
+									       {
+									 "id": "ecwid_order_delivery_time_display_format",
+									 "value": "DATE",
+									 "customerInputType": "TEXT",
+									 "title": "",
+									 "orderDetailsDisplaySection": "",
+									 "orderBy": "0"
+									       },
+									       {
+									 "id": "ecwid_order_delivery_time_interval_start",
+									 "value": updated_time_start,
+									 "customerInputType": "DATETIME",
+									 "title": "Delivery date and time",
+									 "orderDetailsDisplaySection": "shipping_info",
+									 "orderBy": "1"
+										   }
+									       ]
+									}
 			    			var stringified_to_send = JSON.stringify(to_send)
 						krslog(stringified_to_send);
 						xhttp2.send(stringified_to_send);
