--- a/test.html
+++ b/test.html
@@ -43,9 +43,9 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date Changer40</div>
+				<div class="form-area__title form-area__title--small">Date changer</div>
 				<div class="form-area__content">
-					<p>Please key in the order number to change the date</p>
+					<p>Please key in the order number to change the delivery date, do not use for self pickup orders</p>
 					<div class="fieldsets-batch">
 						<div class="fieldset">
 							<div class="field field--medium">
