--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date changer1</div>
+				<div class="form-area__title form-area__title--small">Date changer2</div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the delivery date, do not use for self pickup orders</p>
 					<div class="fieldsets-batch">
@@ -79,9 +79,11 @@
 <script>
 	$(document).ready(function(){
 		$( "#order_date" ).datepicker({dateFormat: "dd M yy"});
-		EcwidApp.setAppPublicConfig("Helloworld", function(){
-			krslog("setAppPublicConfig Success");
-		});
+	//		EcwidApp.setAppPublicConfig("Helloworld", function(){
+	//		krslog("setAppPublicConfig Success");
+	//	});
+		var test_get = Ecwid.getAppPublicConfig('custom-app-33883008-3'); 
+		krslog(test_get);
 	});
 	function krslog(text){
 	        $("#krstest").append("<br />" + text);
