--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date changer2</div>
+				<div class="form-area__title form-area__title--small">Date changer3</div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the delivery date, do not use for self pickup orders</p>
 					<div class="fieldsets-batch">
@@ -67,6 +67,16 @@
 				<div class="form-area__action">
 					<button type="button" onclick="onSaveClick()" class="btn btn-primary btn-medium">Save</button>
 				</div>
+				<div class="form-area__title form-area__title--small">Blockout Dates</div>
+				<div class="form-area__content">
+					<p>Please Enter Dates to blockout</p>
+					<table id="blockout-table">
+						<tr>
+						<th>Date</th>
+						<th></th>
+						</tr>
+					</table>
+				</div>
 				<h5>Log:</h5>
 				<p id="krstest"></p>
 			</div>
@@ -79,9 +89,9 @@
 <script>
 	$(document).ready(function(){
 		$( "#order_date" ).datepicker({dateFormat: "dd M yy"});
-	//		EcwidApp.setAppPublicConfig("Helloworld", function(){
-	//		krslog("setAppPublicConfig Success");
-	//	});
+			EcwidApp.setAppPublicConfig("Helloworld", function(){
+			krslog("setAppPublicConfig Success");
+		});
 		var test_get = Ecwid.getAppPublicConfig('custom-app-33883008-3'); 
 		krslog(test_get);
 	});
