--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date changer7:produce a json string</div>
+				<div class="form-area__title form-area__title--small">Date changer8: do not need app string</div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the delivery date, do not use for self pickup orders</p>
 					<div class="fieldsets-batch">
@@ -108,7 +108,7 @@
 		//EcwidApp.setAppPublicConfig("Helloworld", function(){
 		//	krslog("setAppPublicConfig Success");
 		//});
-		var test_get = EcwidApp.getAppPublicConfig('custom-app-33883008-3'); 
+		var test_get = EcwidApp.getAppPublicConfig(); 
 		krslog(test_get);
 	});
 	function krslog(text){
