--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<div class="form-area__title form-area__title--small">Date changer9: delete button will print delete pompt</div>
+				<div class="form-area__title form-area__title--small">Date changer10: using correct public data retriever</div>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the delivery date, do not use for self pickup orders</p>
 					<div class="fieldsets-batch">
@@ -76,6 +76,7 @@
 						<th></th>
 						</tr>
 					</table>
+					<br><br>
 					<div class="fieldsets-batch">
 						<div class="fieldset">
 							<div class="field field--medium">
@@ -108,8 +109,10 @@
 		//EcwidApp.setAppPublicConfig("Helloworld", function(){
 		//	krslog("setAppPublicConfig Success");
 		//});
-		var test_get = EcwidApp.getAppPublicConfig(); 
-		krslog(test_get);
+
+		EcwidApp.getAppPublicConfig(function(publicData) {
+			krslog(publicData);
+		});
 	});
 	function krslog(text){
 	        $("#krstest").append("<br />" + text);
