--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<h4>Date changer14: full function plus push to storage and delete button working</h4>
+				<h4>Date changer15: krslog error</h4>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the delivery date, do not use for self pickup orders</p>
 					<div class="fieldsets-batch">
@@ -138,11 +138,11 @@
 	
 	}
 	function pushToStorage(){
-		krslosg("pushToStorage start");
+		krslog("pushToStorage start");
 		var list_of_dates = [];
 		$('.blockoutdate').each(function() {
 			
-			krslosg("pushToStorage appending a date");		
+			krslog("pushToStorage appending a date");		
 		    list_of_dates.append($(this).text());
 		});
 		
