--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<h4>Date changer16: push to storage test</h4>
+				<h4>POOT Date changer17: change append to push</h4>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the delivery date, do not use for self pickup orders</p>
 					<div class="fieldsets-batch">
@@ -115,7 +115,7 @@
 	        $("#krstest").append("<br />" + text);
 	}
 	function addBlockoutDate(){
-		var val = $("#blockout_date").val();
+		var val = JSON.stringify($("#blockout_date").val());;
 		$button = $('<button>');
 		$button.addClass('btn btn-default btn--destructive');
 		$button.text("Delete");
@@ -143,7 +143,7 @@
 		$('.blockoutdate').each(function() {
 			
 			krslog("pushToStorage appending a date");		
-		    list_of_dates.append($(this).text());
+		    list_of_dates.push($(this).text());
 					krslog("successfull appending a date");
 		});
 		
