--- a/test.html
+++ b/test.html
@@ -115,7 +115,7 @@
 	        $("#krstest").append("<br />" + text);
 	}
 	function addBlockoutDate(){
-		var val = JSON.stringify($("#blockout_date").val());;
+		var val = JSON.stringify($("#blockout_date").val());
 		$button = $('<button>');
 		$button.addClass('btn btn-default btn--destructive');
 		$button.text("Delete");
