--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<h4>POOT Date changer17: change append to push</h4>
+				<h4>POOT Date changer18: Epoch</h4>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the delivery date, do not use for self pickup orders</p>
 					<div class="fieldsets-batch">
@@ -73,6 +73,7 @@
 					<table id="blockout-table">
 						<tr>
 						<th>Blockout Date </th>
+							<th>Epoch</th>
 						<th></th>
 						</tr>
 					</table>
@@ -115,7 +116,9 @@
 	        $("#krstest").append("<br />" + text);
 	}
 	function addBlockoutDate(){
-		var val = JSON.stringify($("#blockout_date").val());
+		
+		var val = $("#blockout_date").val();
+		var epoch = val.getTime();
 		$button = $('<button>');
 		$button.addClass('btn btn-default btn--destructive');
 		$button.text("Delete");
@@ -126,7 +129,8 @@
 		});
 		if (val){
 			var $tr = $('<tr>').append(
-				$('<td class="blockoutdate">').text(val),
+				$('<td>').text(val),
+				$('<td class="blockoutdate">').text(epoch),
 				$('<td>').append($button));
 			$tr.appendTo('#blockout-table');
 		}
