--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 	<div class="a-card a-card--normal">
 		<div class="a-card__paddings">
 			<div class="form-area">
-				<h4>POOT Date changer18: Epoch</h4>
+				<h4>POOT Date changer19: Date Picker</h4>
 				<div class="form-area__content">
 					<p>Please key in the order number to change the delivery date, do not use for self pickup orders</p>
 					<div class="fieldsets-batch">
@@ -117,7 +117,7 @@
 	}
 	function addBlockoutDate(){
 		
-		var val = $("#blockout_date").val();
+		var val = $("#blockout_date").datepicker('getDate');
 		var epoch = val.getTime();
 		$button = $('<button>');
 		$button.addClass('btn btn-default btn--destructive');
